tests/spec/fail/generic_map_value_mismatch.aja
fuc sum_values(m: map[str, int]) -> int:
    return 0

bad = {"a": "x"}
print(sum_values(bad))
